tests/error/effects_errors/return_pure_callable.err
Error: Type mismatch (at $FILE:10:10)
   | 
 8 | @guppy
 9 | def main() -> Callable[[int], int]:
10 |    return pure_func
   |           ^^^^^^^^^ Expected return value of type `int -> int`, got `int -[]->
   |                     int`

Guppy compilation failed due to 1 previous error
